src/main.scss
$sans: 'Open Sans Bold', 'Open Sans', Helvetica, Arial, sans-serif;
$serif: 'Noto Serif', serif;

/* Mixin defining our media query types
      http://css-tricks.com/media-queries-sass-3-2-and-codekit/
 */
@mixin breakpoint($point) {
  @if $point == narrow {
    @media (min-width: 600px) and (max-width: 790px) { @content; }
  }
  @else if $point == mobile {
    @media (max-width: 600px)  { @content; }
  }
}

/* http://stefanwienert.net/blog/2012/05/18/easy-css-vendor-prefix-mixin-for-sass/ */
@mixin vendor-prefix($name, $argument...) {
  #{$name}: $argument;
  -webkit-#{$name}: $argument;
  -ms-#{$name}: $argument;
  -moz-#{$name}: $argument;
}

/* Icon font for link-out sidebar */
@font-face {
  font-family: 'fontello';
  src: url('fonts/fontello.eot?27200950');
  src: url('fonts/fontello.eot?27200950#iefix') format('embedded-opentype'),
       url('fonts/fontello.woff?27200950') format('woff'),
       url('fonts/fontello.ttf?27200950') format('truetype'),
       url('fonts/fontello.svg?27200950#fontello') format('svg');
  font-weight: normal;
  font-style: normal;
}

/* Nicholas Gallagher's clearfix */
%clearfix {
  &:before,
  &:after {
    content: " "; /* 1 */
    display: table; /* 2 */
  }

  &:after {
    clear: both;
  }
}


/* Fix the box model */
* {
  box-sizing: border-box;
}



html, body {
  margin: 0px;
  padding: 0px;
  min-height: 100%;
}

body {
  background: url(img/pipetile.png);
  font-family: $serif;
  color: #080f17;
  @include vendor-prefix(text-size-adjust, 100%);
}

a {
  color: #115588;
}

.icon {
  font-family: fontello;
  text-decoration: none;
}

.no-icon {
  font-size: 12px;
}

#container, #content {
  min-height: 100%;
}

#content {
  position: relative;
  padding: 56px 66px 0;
}

footer {
  clear: both;
  color: #666;
  font-size: 0.8em;
  margin-bottom: 80px;
}

.footer-link {
  float: right;
}

#container {
  @extend %clearfix;
  margin-left: 15%;
  background: #fefafa;
  @include breakpoint(mobile) {
    margin: 0;
  }
}



/* Headings */ 
h1, h2, h3 {
  font-weight: bold;
  font-family: $sans;
  display: inline-block;
}

h1 {
  font-size: 1.7em;
}

h2 {
  font-size: 1.2em;
}

h3 {
  margin-bottom: 0px;
  margin-right: 10px;
  font-size: 1.05em;
}

.tag {
  font-family: $sans;
}

section {
  clear: both;
  padding: 70px 0 70px;

  @include breakpoint(mobile) {
    padding: 20px 0 20px;
  }
}

figure {
  opacity: 0;
  @include vendor-prefix(transition, opacity 2s);
  visibility: hidden;
  position: absolute;
  right: 20px;
}


figure {
  // this will get overridden via JS:
  top: -1000px;

  width: 200px;
  height: 200px;

  @include breakpoint(narrow) {
    visibility: visible;
    opacity: 1.0;
    width: 30%;
    height: auto;
    float: left;
    position: static;
    & > img {
      border: 0px;
      margin: 0px;
    }
  }

  @include breakpoint(mobile) {
    visibility: visible;
    display: block;
    opacity: 1.0;
    width: 30%;
    height: auto;
    float: right;
    & > img {
      border: 0px;
      margin: 0px;
    }
    position: static;
  }
}

figure > img {
  border-radius: 50%;
  width: 100%;
  margin: 25px;
  border: 75px double #2e1404;
  @include vendor-prefix(transition, border-width 3s ease-in);

  .active & {
      border-width: 0px;
      &.square {
          border-radius: 0px;
      }
  }
}

.active figure {
  opacity: 1.0;
  visibility: visible;
}


#unicorn {
  width: 120px;
  height: 68px;
  position: absolute;
  visibility: hidden;
  z-index: 3;

  @include breakpoint(narrow) {
    display: none;
  }
  @include breakpoint(mobile) {
    display: none;
  }

  &::selection { background: transparent }
  &::-moz-selection { background: transparent }
}

@include breakpoint(mobile) {
  #top, aside {
    float: left;
  }

  #top {
    margin-bottom: 17px;
  }

  #content {
    padding: 10px 20px;
  }
}

#top h1 {
  @extend %clearfix;
  margin: 0;
  background: #ab8771;
  color: #fff;
  padding: 3px 6px 4px;
  @include vendor-prefix(transform, rotate(9deg));
  text-align: right;
  width: 162px;
  position: fixed;
  right: 10px;
  top: 22px;

  @include breakpoint(mobile) {
    margin-right: 20px;
    position: static;
    @include vendor-prefix(transform, none);
  }

  @include breakpoint(narrow) {
    width: 1.5em;
    text-align: center;
  }

  @include vendor-prefix(transform, translate(0px, 0px) rotate(9deg));
  -webkit-transition: -webkit-transform 3s;
  -moz-transition: -moz-transform 3s;
  transition: transform 3s;
  -ms-transition: -ms-transform 3s;

  .wf-loading & {
    visibility: hidden;
    @include vendor-prefix(transform, translate(0px, -160px) rotate(-50deg));
  }
}

.project {
  margin: 40px 0;
}

#sidebar {
  position: fixed;
  right: 10px;
  top: 120px;
  width: 3em;
  font-size: 2em;
  text-align: center;
  z-index: 10;

  -webkit-transition: -webkit-transform 3s;
  -moz-transition: -moz-transform 3s;
  transition: transform 3s;
  -ms-transition: -ms-transform 3s;
  @include vendor-prefix(transform, scale(1.0) rotate(0deg));

  .wf-loading & {
    @include vendor-prefix(transform, scale(0.0) rotate(-180deg));
  }

  @include breakpoint(mobile) {
    position: static;
    width: auto;
    margin-top: 20px;
  }

  @include breakpoint(narrow) {
    width: 1.5em;
    font-size: 1.5em;
  }

  .icon {
    @include vendor-prefix(transition, color 1s);
    text-shadow: 0px 0px 3px #fff;
    -webkit-transition: text-shadow 1.5s, color 0.5s;
    
    &:hover {
      color: #fff;
      text-shadow: 0px 0px 15px #115588;
    }
  }
}

.project, section {
  p, h2, h3 {
    max-width: 424px;
  }
}

.tag {
  background: #ab8771;
  opacity: 0.5;
  color: #fff;
  padding: 0px 3px 1px;
  text-transform: uppercase;
  font-size: 0.6em;
  border-radius: 3px;

  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
  -ms-transition: opacity 0.5s, -ms-transform 0.5s;
  -moz-transition: opacity 0.5s, -moz-transform 0.5s;
  transition: opacity 0.5s, transform 0.5s;
  
  display: inline-block;

  .project:hover & {
    opacity: 1;
    @include vendor-prefix(transform, rotate(4deg) scale(1.1));        
  }
}

#top span {
  display: block;
  float: left;

  /* Only display initials of name when view is narrow */
  @include breakpoint(narrow) {
    font-size: 0px;
    &::first-letter {
      font-size: 20px;
    }
  }

}


.doodad-track {
  display: none;
}

/* Mobile: show horizontal scrolling pipe on bottom, for some reason */
@include breakpoint(mobile) {

  .doodad-track {
    position:fixed;
    bottom:0px;
    background: #888;
    background: rgba(0,0,0,0.5);
    height:15px;
    width:100%;
  }

  .doodad {
    position: absolute;
    width: 50px;
    height: 20px;
    margin-top: -8px;
    margin-left: -25px;
    background: transparent url(img/pipe.png);
  }

}

.comic-sans, .comic-sans * {
  font-family: "Comic Sans MS", "Comic Sans", Arial, Verdana, sans-serif !important;
}

canvas {
  z-index: 1;
}

h1, h2, h3, p, .tag {
  @include vendor-prefix(transition, opacity 2s); 
  opacity: 1.0;
  position: relative;
  z-index: 2;

  /* handle webfont FOUC */
  .wf-loading & {
      opacity: 0;
      visibility: hidden;
  }
}

